<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.vacation.infos.tchat.TchatFragment">

    <TextView
        android:layout_marginTop="@dimen/default_margin"
        android:fontFamily="@font/alata"
        android:textColor="@color/orange"
        android:textSize="25sp"
        android:id="@+id/tchat_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tchat_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tchat_recycler_view"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tchat_title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tchat_recycler_view">

        <EditText
            android:id="@+id/tchat_msg_input"
            android:layout_width="156dp"
            android:layout_height="wrap_content"
            android:hint="@string/tchat_msg_input_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:importantForAutofill="no"
            android:inputType="text" />

        <Button
            android:id="@+id/tchat_msg_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/tchat_msg_input"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/tchat_send_btn_txt" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>